# ismi

./: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/ismi/: __init__.py  io.py
tests/: Development-README.md  test_download_data.py
