[metadata]
name = ismi
description = ISMI Utilities
author = Bram de Wilde, Stephan Dooper, Pierpaolo Vendittelli, Joeran Bosma
license = Apache 2.0
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    ismi
install_requires =
    matplotlib>=3.5.*
    numpy
    scipy>=1.7.*
    tqdm
    jupyter>=1.0.*
    nbgrader>=0.8.*
    simpleitk>=2.1.*
    scikit-learn>=1.0.*
    pydicom>=2.2.*
    requests
    ipywidgets
    imgaug

python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
picai_eval = py.typed

[flake8]
max-line-length = 160